--- a/doc/递归函数.md
+++ b/doc/递归函数.md
@@ -8,11 +8,11 @@
 
 + 宏观分析 - 拆分成子问题 
 
-  ![宏观分析](../imgs/dg-1.png)
+  ![宏观分析](https://vip2.loli.io/2022/08/14/o6A8YuH3MXm5zxW.png)
 
 + 微观分析 -- 代码执行的流程
 
-  ![运行流程](../imgs/dg-2.png)
+  ![运行流程](https://vip2.loli.io/2022/08/14/EZiuXMQ6Ih4jbDg.png)
 
 + 代码实现
 
